--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ main {
   width: 100%;
   padding: 1.5rem;
   padding-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 main .hero-text {
   width: 100%;
@@ -32,4 +35,36 @@ main .hero-text .text {
 }
 main .hero-text .text p {
   text-transform: uppercase;
+}
+main .image-text {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+main .image-text .top {
+  width: 100%;
+  aspect-ratio: 1/1;
+}
+main .image-text .top img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+main .image-text .bottom {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+main .image-text .bottom h1 {
+  text-transform: uppercase;
+  font-size: 2.5rem;
+  font-weight: 200;
+  line-height: 1;
+}
+main .image-text .bottom p {
+  font-size: 1.2rem;
+  font-weight: 200;
 }/*# sourceMappingURL=style.css.map */
