--- a/style.scss
+++ b/style.scss
@@ -10,29 +10,69 @@ body {
   width: 100%;
 }
 
-main{
+main {
+  width: 100%;
+  padding: 1.5rem;
+  padding-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  .hero-text {
     width: 100%;
-    padding: 1.5rem;
-    padding-top: 4rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
 
-    .hero-text{
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        gap: 1em;
-
-        img{
-            width: 100%;
-            object-fit: cover;
-        }
-
-        .text{
-            display: flex;
-            justify-content: space-between;
-
-            p{
-                text-transform: uppercase;
-            }
-        }
+    img {
+      width: 100%;
+      object-fit: cover;
     }
+
+    .text {
+      display: flex;
+      justify-content: space-between;
+
+      p {
+        text-transform: uppercase;
+      }
+    }
+  }
+
+  .image-text {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    .top {
+      width: 100%;
+      aspect-ratio: 1/1;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    .bottom {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
+      h1 {
+        text-transform: uppercase;
+        font-size: 2.5rem;
+        font-weight: 200;
+        line-height: 1;
+      }
+
+      p {
+        font-size: 1.2rem;
+        font-weight: 200;
+      }
+    }
+  }
 }
