--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ main .image-text .bottom {
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 main .image-text .bottom h1 {
   text-transform: uppercase;
@@ -67,4 +67,22 @@ main .image-text .bottom h1 {
 main .image-text .bottom p {
   font-size: 1.2rem;
   font-weight: 200;
+  line-height: 1.5;
+  opacity: 0.7;
+}
+main .image-text .bottom .services {
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+  width: 100%;
+}
+main .image-text .bottom .services .service {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+main .image-text .bottom .services .service p {
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font-weight: 400;
 }/*# sourceMappingURL=style.css.map */
