--- a/style.scss
+++ b/style.scss
@@ -60,7 +60,7 @@ main {
       width: 100%;
       display: flex;
       flex-direction: column;
-      gap: 1rem;
+      gap: 0.5rem;
 
       h1 {
         text-transform: uppercase;
@@ -72,6 +72,31 @@ main {
       p {
         font-size: 1.2rem;
         font-weight: 200;
+        line-height: 1.5;
+        opacity: 0.7;
+      }
+
+      .services {
+        display: flex;
+        flex-direction: column;
+        gap: 1.2rem;
+        width: 100%;
+
+        .service {
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+
+          p {
+            text-transform: uppercase;
+            font-size: 1.5rem;
+            font-weight: 400;
+          }
+        }
+        // .line {
+        //   height: 0.1rem;
+        //   background-color: grey;
+        // }
       }
     }
   }
